feat: add system types and network address arrays
